# tc2

./: README.md
.github/workflows/: build-server.yml
client/: .gitignore  README.md
client/client/: Info.plist  clientApp.swift
client/client.xcodeproj/: project.pbxproj
client/client/app/: ContentView.swift  clientApp.swift
client/client/model/: AccountModel.swift  ExerciseSession.swift  ExerciseSessionMessagePayload.swift
client/client/models/: AuthModel.swift
client/client/styles/: ButtonStyle.swift
client/clientTests/: clientTests.swift
client/clientUITests/: clientUITests.swift  clientUITestsLaunchTests.swift
server/: .gitignore  README.md  pyproject.toml
server/app/: .env.example  config.py  deps.py  main.py
server/app/db/: mongo.py  redis.py
server/app/models/requests/: account.py  auth.py  exercise.py  session.py
server/app/models/responses/: account.py  auth.py  base.py  session.py
server/app/repos/: account.py  exercise.py  exercise_session.py  perm.py
server/app/routers/: account.py  auth.py  exercise.py  exercise_session.py  exercise_session_ws.py  exercise_session_ws_v2.py  session.py
server/app/schema/: account.py  auth.py  enums.py  exercise.py  exercise_session.py  perm.py  session.py
server/app/schema/messages/: exercise_session.py  session.py
server/app/services/: exercise_session_service.py  exercise_session_service_v2.py  session_state.py
server/app/util/: cookie.py  errors.py  hash.py  perm.py  sanitize.py  session.py  token.py
server/schemas/: exercise.json  session_operations.json
(+94 files in other folders)
